--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- End Wayback Rewrite JS Include -->
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Krypton@MercLabs</title>
+    <title>KarshitJoshi@CMI</title>
     <link rel="icon" type="image/jpg" href="https://web.archive.org/web/20230515004259im_/https://mercenarylabs.net/images/favicon.ico">
     <link rel="stylesheet" href="index_files/kryptonstyles_1.css" type="text/css">
 <style>:is([id*='google_ads_iframe'],[id*='taboola-'],.taboolaHeight,.taboola-placeholder,#top-ad,#credential_picker_container,#credentials-picker-container,#credential_picker_iframe,[id*='google-one-tap-iframe'],#google-one-tap-popup-container,.google-one-tap__module,.google-one-tap-modal-div,#amp_floatingAdDiv,#ez-content-blocker-container) {display:none!important;min-height:0!important;height:0!important;}</style></head>
@@ -22,61 +22,39 @@
         <div class="sidebar">
             <div class="section-title">Contact Information</div>
             <div class="contact-info">
-                <span>Discord:</span><br>
-                Krypton#5577
+                <span>Linkedin:</span><br>
+                <a href="https://www.linkedin.com/in/karshit-joshi-674381372/">linkedin:karshitjoshi</a>
                 <br><br>
                 <span>Email:</span><br>
-                <a href="https://web.archive.org/web/20230515004259/mailto://protonmail.com/">Krypton@protonmail.com</a>
+                karshitj.ug2025@cmi.ac.in
                 <br><br>
                 <span>Github:</span><br>
-                <a href="https://web.archive.org/web/20230515004259/https://github.com/Krypton279">Krypton279</a>
+                <a href="https://github.com/karshitjoshi">github:karshitjoshi</a>
                 <br><br>
-            </div>
-            <div class="contact-info">
-                hosted by <br>
-                <a href="https://web.archive.org/web/20230515004259/https://mercenarylabs.net/">Mercenary Labs</a>
             </div>
         </div>
         <div class="content">
-            <div class="section-title">Projects</div>
+            <div class="section-title">Collections</div>
             <div class="text">
-                <p>I am a person and this is my website where I post my 
-projects and stuff. You can probably hit me up on Discord. I am going to
- have undergraduate college qualification exams soon. Thus, I might be 
-inactive.</p>
-                <p>Projects:</p>
+                <p>I am currently a Bachelor's student at CMI (Chennai Mathematical Institute).Some of my coding projects are linked below, aswell as some of my notes which I made for my personal reference during my studies at CMI.</p>
+                <p>Projects</p>
             </div>
             <ul class="projects-list">
                 <li>
-                    <b><a href="https://web.archive.org/web/20230515004259/https://github.com/Krypton279/Blakernel">Blakernel</a></b>
-                    <p>A Kernel/</p>
+                    <b><a href="https://github.com/karshitjoshi/PingOS">PingOS</a></b>
+                    <p>A kernel that just plays ping pong.</p>
+                </li>
+                <li>
+                    <b><a href="https://github.com/karshitjoshi/Chess">Chess</a></b>
+                    <p>A 2 player chess game in C.</p>
+                </li>
+            </ul>
+            <div class="section-title">Notes</div>
+            <ul class="projects-list">
+                <li>
+                    <b><a href="https://raw.githubusercontent.com/karshitjoshi/notes/main/HomeWork3.pdf">TEST</a></b>
                 </li>
             </ul>
         </div>
     </div>
-
-
-
-
-
 </body></html>
-<!--
-     FILE ARCHIVED ON 00:42:59 May 15, 2023 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 01:26:48 Nov 19, 2025.
-     JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
-
-     ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
-     SECTION 108(a)(3)).
--->
-<!--
-playback timings (ms):
-  captures_list: 0.597
-  exclusion.robots: 0.036
-  exclusion.robots.policy: 0.028
-  esindex: 0.009
-  cdx.remote: 5.869
-  LoadShardBlock: 224.273 (3)
-  PetaboxLoader3.datanode: 235.588 (4)
-  PetaboxLoader3.resolve: 174.679 (3)
-  load_resource: 262.771
--->
